# rosu-game

./: .gitignore  Cargo.toml  README.md  test.osu
.github/workflows/: build_replay_viewer.yml  ci.yml
replay-viewer/: Cargo.toml
replay-viewer/src/: analyze_cursor_renderer.rs  app.rs  judgements_list.rs  line.wgsl  lines_vertex.rs  main.rs  point.wgsl  replay_log.rs  state.rs
src/: approach_circle_instance.rs  bin.rs  camera.rs  config.rs  egui_state.rs  frameless_source.rs  graphics.rs  hit_circle_instance.rs  hitobjects.rs  lib.rs  main.rs  math.rs  osu_cursor_renderer.rs  osu_db.rs  osu_input.rs  osu_renderer.rs  osu_shader_state.rs  osu_state.rs  quad_instance.rs  quad_renderer.rs  rgb.rs  skin_ini.rs  skin_manager.rs  slider.rs  slider_instance.rs  song_importer_ui.rs  song_select_state.rs  texture.rs  timer.rs  vertex.rs
src/hit_objects/: circle.rs  hit_window.rs  mod.rs  slider.rs
src/processor/: mod.rs  replay_log.rs
src/renderer/: cursor.rs
src/screen/: mod.rs  settings.rs
src/screen/song_select/: mod.rs
src/shaders/: approach_circle.wgsl  hit_circle.wgsl  quad.wgsl  quad_atlas.wgsl  quad_textured.wgsl  slider.wgsl  slider2.wgsl  slider_to_screen.wgsl
src/ui/: settings.rs
tests/: bebra.osu  database.rs  gameplay.rs  linear_slider.osu  linear_sliders.osu  linear_sliders2.osu  mega_test.osu  other.rs  reverse.osu  simulated_gameplay.rs  single_slider.osu  sliders.osu  test.osu  test3.osu
tests/data/: jumps_simple.osu  jumps_simple2.osr  jumps_simple4.osr  single_hit_circle.osu  single_hit_circle1.osr  single_hit_circle3.osr
tests/data/gameplay/: aozora_hard.osr  aozora_hard.osu  getta_banban.osr  getta_banban.osu  gin_no_kaze.osr  gin_no_kaze.osu  jumps_simple1.osr  jumps_simple3.osr  koise.osr  koise.osu  koise2.osr  single_hit_circle2.osr  slider.osr  slider.osu  slider2.osr  slider3.osr  slider_leniency.osr  slider_leniency.osu  slider_two_ticks.osr  slider_two_ticks.osu  slider_two_ticks2.osr  slider_two_ticks4.osr  slider_with_stack.osr  slider_with_stack.osu  slider_with_stack2.osr  slider_with_stack2.osu  slider_with_ticks_and_reverse.osr  slider_with_ticks_and_reverse.osu  slider_with_ticks_and_reverse2.osr  sliders_and_jumps.osr  sliders_and_jumps.osu  stacks.osr  stacks.osu  two_sliders.osr  two_sliders.osu  two_sliders2.osr
tests/data/other/: slider_fast_with_reverse_slides.osu  slider_fast_with_reverse_slides2.osu  slider_with_ticks.osu
tests/shit/: fickle.osu
wasm/: Cargo.toml  build.sh  debug_server.py  index.html
wasm/src/: lib.rs
