[package]
name = "rosu-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rosu"
path = "src/lib.rs"

[[bin]]
name = "rosu-client"
path = "src/bin.rs"

[workspace]
members = [
	"wasm"
]

[workspace.dependencies]
winit = "0.30.5"
wgpu = { version = "22.1.0", features = ["webgl"] }
rosu-map = { git = "https://github.com/MaxOhn/rosu-map.git" }

[dependencies]
log = "0.4.20"
winit = { workspace = true }
rosu-map = { workspace = true }
wgpu = { workspace = true }
md5 = "0.7"
bytemuck = { version = "1.14.0", features = ["zeroable_maybe_uninit", "zeroable_atomics"] }
cgmath = { git = "https://github.com/rustgd/cgmath.git", features = ["bytemuck"] }
image = "0.24.7"
rosu-pp = "0.10.0"
tracy-client = { version = "0.16.5", default-features = true }
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
smallvec = "1.13.2"
rodio = "0.19.0"
raw-window-handle = "0.6.2"
rust-ini = "0.21.0"
thiserror = "1.0.63"
rusqlite = "0.32.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
rand = "0.8.5"
oneshot = { version = "0.1.8", default-features = false, features = ["std"] }


#egui = { git = "https://github.com/486c/egui", branch = "0.29.1"}
#egui-winit = { git = "https://github.com/486c/egui", branch = "0.29.1", default-features = false}
#egui-wgpu = { git = "https://github.com/486c/egui", branch = "0.29.1"}
#egui_extras = { git = "https://github.com/486c/egui", branch = "0.29.1"}
#egui_file = "0.19.0"

egui = "0.29.1"
egui-winit = { version = "0.29.1", default-features = false }
egui-wgpu = "0.29.1"
egui_extras = "0.29.1"
egui_file = "0.19.0"
#egui-winit = { git = "https://github.com/486c/egui", branch = "0.29.1", default-features = false}
#egui-wgpu = { git = "https://github.com/486c/egui", branch = "0.29.1"}
#egui_extras = { git = "https://github.com/486c/egui", branch = "0.29.1"}
#egui_file = "0.19.0"



cfg-if = "1.0.0"
getrandom = { version = "0.2.15", features = ["js"] }
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"

#[replace]
#"egui:0.29.1" = {git = "https://github.com/486c/egui", branch = "0.29.1"}
