[package]
name = "rosu-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rosu"
path = "src/lib.rs"

[[bin]]
name = "rosu-client"
path = "src/bin.rs"

[workspace]
members = [
	"replay-viewer"
]

[workspace.dependencies]
winit = "0.30.7"
wgpu = { version = "24.0.3", features = ["webgl"] }
rosu-map = { git = "https://github.com/MaxOhn/rosu-map.git" }
egui = "0.31.1"
egui-winit = { version = "0.31.1", default-features = false }
egui-wgpu = "0.31.1"
egui_extras = "0.31.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dependencies]
winit = { workspace = true }
rosu-map = { workspace = true }
wgpu = { workspace = true }
egui = { workspace = true }
egui-winit = { workspace = true }
egui-wgpu = { workspace = true }
egui_extras = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true } 

log = "0.4.20"
bytemuck = { version = "1.14.0", features = ["zeroable_maybe_uninit", "zeroable_atomics"] }
cgmath = { git = "https://github.com/rustgd/cgmath.git", features = ["bytemuck"] }
image = "0.24.7"
rosu-pp = "0.10.0"
tracy-client = { version = "0.16.5", default-features = false }
ultraviolet = { version = "0.9.2", features = ["bytemuck"] }
smallvec = "1.13.2"
rodio = "0.19.0"
raw-window-handle = "0.6.2"
rust-ini = "0.21.0"
thiserror = "1.0.63"
r2d2_sqlite = "0.25.0"
r2d2 = "0.8.10"
rand = "0.8.5"
oneshot = { version = "0.1.8", default-features = false, features = ["std"] }


#egui = { git = "https://github.com/486c/egui", branch = "0.29.1"}
#egui-winit = { git = "https://github.com/486c/egui", branch = "0.29.1", default-features = false}
#egui-wgpu = { git = "https://github.com/486c/egui", branch = "0.29.1"}
#egui_extras = { git = "https://github.com/486c/egui", branch = "0.29.1"}
#egui_file = "0.19.0"

#egui-winit = { git = "https://github.com/486c/egui", branch = "0.29.1", default-features = false}
#egui-wgpu = { git = "https://github.com/486c/egui", branch = "0.29.1"}
#egui_extras = { git = "https://github.com/486c/egui", branch = "0.29.1"}
#egui_file = "0.19.0"



cfg-if = "1.0.0"
getrandom = { version = "0.2.15", features = ["js"] }
pollster = "0.3.0"
#osu-replay-parser = "0.2.0"
osu-replay-parser = { git = "https://github.com/486c/osr-parser"}
md5 = "0.7.0"
rfd = "0.15.4"


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"] }

[target.'cfg(target_os = "linux")'.dependencies]
rusqlite = "0.32.1"

[dev-dependencies]
approx = "0.5.1"
test-case = "3.3.1"
testdir = "0.9.3"

#[replace]
#"egui:0.29.1" = {git = "https://github.com/486c/egui", branch = "0.29.1"}
