[package]
name = "replay_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.22.0"
osu-replay-parser = { path = "/home/lopij/wq/osr-parser" }
rosu-game = { path = "../" }
winit = { workspace = true }
wgpu = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui_extras = { workspace = true }
rosu-map = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true } 
oneshot = { version = "0.1.8", default-features = false, features = ["std"] }

pollster = "0.3.0"
egui-winit = "0.31.1"
cgmath = { git = "https://github.com/rustgd/cgmath.git", features = ["bytemuck"] }
tracy-client = { version = "0.16.5", default-features = false }
log = "0.4.27"
env_logger = "0.11.7"
rfd = "0.15.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"           # to access the DOM (to hide the loading text)
