[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "rosu_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
log = "0.4.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-time = "1.1.0"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
]}

wgpu-tests = { path = "../" }

winit = { workspace = true }
