[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[lib]
name = "rosu_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
log = "0.4.20"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-time = "1.1.0"
web-sys = { version = "0.3.69", features = [
    "Document",
    "Window",
    "Element",
    "HtmlCanvasElement",
	"Location",
]}

rosu-game = { path = "../" }

winit = { workspace = true }
rosu-map = { workspace = true }
wgpu = { workspace = true }
url = "2.5.2"
image = "0.24.7"
reqwest-wasm = "0.11.16"
